; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_socket.c_sd_close.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_socket.c_sd_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SOCKET_UNDEFINED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sd_close(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = icmp ne i32* %3, null
  br i1 %4, label %5, label %16

5:                                                ; preds = %1
  %6 = load i32*, i32** %2, align 8
  %7 = load i32, i32* %6, align 4
  %8 = call i64 @socket_defined(i32 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %16

10:                                               ; preds = %5
  %11 = load i32*, i32** %2, align 8
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @openvpn_close_socket(i32 %12)
  %14 = load i32, i32* @SOCKET_UNDEFINED, align 4
  %15 = load i32*, i32** %2, align 8
  store i32 %14, i32* %15, align 4
  br label %16

16:                                               ; preds = %10, %5, %1
  ret void
}

declare dso_local i64 @socket_defined(i32) #1

declare dso_local i32 @openvpn_close_socket(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
